--- a/style.scss
+++ b/style.scss
@@ -69,7 +69,7 @@ p {
 }
 
 a {
-  color: $white;
+  color: $blue;
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
@@ -152,6 +152,7 @@ img {
 
 .wrapper-masthead {
   margin-bottom: 50px;
+  background: $lightGray;
 }
 
 .masthead {
@@ -191,7 +192,7 @@ img {
 
 .site-name {
   margin: 0;
-  color: $white;
+  color: $darkBlue;
   cursor: pointer;
   font-family: $georgia;
   font-weight: bold;
@@ -224,7 +225,7 @@ nav {
 
   a {
     margin-left: 20px;
-    color: $white;
+    color: $darkBlue;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
@@ -251,10 +252,6 @@ nav {
 }
 
 .post {
-  h1 {
-    border-bottom: 1px solid $white;
-  }
-
   blockquote {
     margin: 1.8em .8em;
     border-left: 2px solid $gray;
