--- a/style.scss
+++ b/style.scss
@@ -69,7 +69,8 @@ p {
 }
 
 a {
-  color: $blue;
+  color: $white;
+  font-weight: bold;
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
