--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-
-<div class="posts">
+<div id="main" role="main" class="container">
+  <div class="posts">
   {% for post in site.posts %}
     <article class="post">
 
@@ -15,4 +15,5 @@ layout: default
       <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
     </article>
   {% endfor %}
+  </div>
 </div>
