--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,12 +1,15 @@
 ---
 layout: default
 ---
+<div id="main" role="main" class="container">
+  <article class="page">
 
-<article class="page">
+	  	<h1>{{ page.title }}</h1>
+ 	 	
+ 	 	<div class="entry">
+    		{{ content }}
+  		</div>
+	
+	</article>
+</div>
 
-  <h1>{{ page.title }}</h1>
-
-  <div class="entry">
-    {{ content }}
-  </div>
-</article>
