--- a/style.scss
+++ b/style.scss
@@ -152,7 +152,6 @@ img {
 //
 
 .wrapper-masthead {
-  margin-bottom: 50px;
   background: $lightGray;
 }
 
@@ -195,10 +194,14 @@ img {
   margin: 0;
   color: $darkBlue;
   cursor: pointer;
-  font-family: $georgia;
-  font-weight: bold;
+  font-family: $helvetica;
+  font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
+
+  a:hover {
+    color: inherit;
+  }
 }
 
 .site-description {
@@ -233,7 +236,6 @@ nav {
 
     @include mobile {
       margin: 0 10px;
-      color: $blue;
     }
   }
 }
@@ -241,6 +243,30 @@ nav {
 //
 // .main
 //
+
+.home-banner {
+  height: 50%;
+  font-size: 28px;
+  padding: 50px;
+
+  h1 {
+    margin-top: 0px;
+    font-size: 40px;
+  }
+
+  blockquote {
+    padding-top: 50px;
+  }
+}
+
+.light-banner {
+  background: $lightGray;
+  color: $darkBlue;
+
+  h1, h2, h3, h4, h5, h6 {
+    color: $darkBlue;
+  }
+}
 
 .posts > .post {
   padding-bottom: 2em;
