--- a/style.scss
+++ b/style.scss
@@ -244,8 +244,7 @@ nav {
 // .main
 //
 
-.home-banner {
-  height: 50%;
+.banner {
   font-size: 28px;
   padding: 50px;
 
@@ -255,7 +254,15 @@ nav {
   }
 
   blockquote {
-    padding-top: 50px;
+    padding-top: 20px;
+  }
+}
+
+.home-banner {
+  min-height: 85vh;
+
+  blockquote {
+    padding-top: 80px;
   }
 }
 
@@ -296,6 +303,10 @@ nav {
     text-transform: uppercase;
     font-size: 15px;
   }
+
+  p {
+    margin-top: 50px;
+  }
 }
 
 .wrapper-footer {
@@ -310,7 +321,10 @@ footer {
   text-align: center;
 }
 
-// Settled on moving the import of syntax highlighting to the bottom of the CSS
-// ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
+.img-skill {
+  height: 80px;
+}
+
+// avoid bloating the top of file with imports
 @import "highlights";
 @import "svg-icons";
