Minor css banner improvements

--- a/style.scss
+++ b/style.scss
@@ -277,6 +277,10 @@ nav {
   }
 }
 
+.full-banner {
+  min-height: 100vh;
+}
+
 .posts > .post {
   padding-bottom: 2em;
   border-bottom: 1px solid $lightGray;
