--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,10 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/tinseltown.min.css" />
+    <script src="{{ site.baseurl }}/tinseltown.min.js"></script>
+    <script src="{{ site.baseurl }}/jquery-3.1.1.min.js"></script>
+
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
