--- a/style.scss
+++ b/style.scss
@@ -46,9 +46,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 4.2vmin;
+  font-size: 50px;
   a {
     color: inherit;
+  }
+
+  @include mobile {
+    font-size: 30px;
   }
 }
 
@@ -252,7 +256,6 @@ nav {
 
   h1 {
     margin-top: 0px;
-    font-size: 5.6vmin;
   }
 
   blockquote {
