--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-    <div class="wrapper-masthead">
+    <div class="wrapper-masthead nav-mobile">
       <div class="container">
         <header class="masthead clearfix">
           <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
@@ -33,7 +33,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Home</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/projects">Projects</a>
+            <a href="{{ site.baseurl }}/resume.pdf">Resume</a>
             <a href="{{ site.baseurl }}/blog">Blog</a>
           </nav>
         </header>
