--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 	background: $darkBlue;
-  font: 3vmin/1.4 $helvetica;
+  font: 2.5vmin/1.4 $helvetica;
   color: $white;
   font-weight: 200;
 }
@@ -29,12 +29,15 @@ body {
   max-width: 1080px;
   padding: 0 50px;
   width: 100%;
+
+  @include mobile {
+    padding: 10px;
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: $white;
-  font-weight: bold;
 
   line-height: 1.7;
   margin: 1em 0 15px;
@@ -176,9 +179,8 @@ img {
   margin-right: 15px;
 
   @include mobile {
-    float: none;
     display: block;
-    margin: 0 auto;
+    margin: none;
   }
 
   img {
@@ -229,8 +231,11 @@ nav {
   @include mobile {
     float: none;
     margin-top: 9px;
-    display: block;
     font-size: 16px;
+
+    .site-avatar {
+      margin-top: 0px;
+    }
   }
 
   a {
@@ -256,10 +261,7 @@ nav {
 
   h1 {
     margin-top: 0px;
-  }
-
-  blockquote {
-    padding-top: 2.8vmin;
+    text-align: center;
   }
 }
 
@@ -267,20 +269,15 @@ nav {
   min-height: 85vh;
 
   h1 {
-    color: green;
-    font-family: monospace;
-  }
+    font-size: 85px;
+    margin-bottom: 40px;
+    margin-top: 40px;
 
-  a {
-    color: green;
-  }
-
-  .container {
-    vertical-align: middle;
-  }
-
-  blockquote {
-    padding-top: 11.2vmin;
+    @include mobile {
+      font-size: 50px;
+      margin-bottom: auto;
+      margin-top: auto;
+    }
   }
 }
 
