--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Home</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/resume.pdf">Resume</a>
+            <a target="_blank" href="{{ site.baseurl }}/resume.pdf">Resume</a>
             <a href="{{ site.baseurl }}/blog">Blog</a>
           </nav>
         </header>
