--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,15 +26,15 @@
           <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
 
           <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
+            <h1 class="site-name"><a href="{{ site.baseurl }}/"><font face="courier" color="blue">&ltdev&gt</font>on grove</a></h1>
+            <p class="site-description">cs student // software developer</p>
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Home</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-            <a target="_blank" href="{{ site.baseurl }}/resume.pdf">Resume</a>
-            <a href="{{ site.baseurl }}/blog">Blog</a>
+            <a href="{{ site.baseurl }}/">home</a>
+            <a href="{{ site.baseurl }}/about">about</a>
+            <a target="_blank" href="{{ site.baseurl }}/resume.pdf">resume</a>
+            <a href="{{ site.baseurl }}/blog">blog</a>
           </nav>
         </header>
       </div>
