--- a/style.scss
+++ b/style.scss
@@ -29,6 +29,7 @@ body {
   max-width: 1080px;
   padding: 0 50px;
   width: 100%;
+  text-align: center;
 
   @include mobile {
     padding: 10px;
@@ -261,12 +262,20 @@ nav {
 
   h1 {
     margin-top: 0px;
-    text-align: center;
   }
 }
 
 .home-banner {
   min-height: 85vh;
+  text-align: center;
+
+  p {
+    font-size: 24px;
+
+    @include mobile {
+      font-size: 16px;
+    }
+  }
 
   h1 {
     font-size: 85px;
