CSS fixes and add first part of post

--- a/_includes/header-default.html
+++ b/_includes/header-default.html
@@ -1,7 +1,7 @@
 <header class="header-site" role="banner">
     <div class="content">
         <h1>
-            <span class="site-title"><span style="font-family:monospace;color:orange;font-size:120px"><span style="font-size:50px">&lt;</span>dev<span style="font-size:50px">&gt;</span></span>on grove</span>
+            <span class="site-title"><span style="font-family:monospace;color:orange;font-size:1.3em"><span style="font-size:0.6em">&lt;</span>dev<span style="font-size:0.6em">&gt;</span></span>on grove</span>
             <span class="site-description">{{site.user_title}}</span>
         </h1>
         <div class="icons-home">
